# Raytrace2

./: .gitignore  CMakeLists.txt  README.md  make_scene.py  tasks.py  test.json  vcpkg.json
data/: book2_final_scene_10000_samples.json  cam1.json  cam_config.json  camera_checkered_spheres.json  checker_test.json  checkered_spheres.json  cornell_box1.json  cornell_box3.json  cornell_box4.json  cornell_box5.json  cornell_box_original.json  cornell_box_scene_graph.json  cornell_box_volume.json  cornell_original_100_samples_stratify.json  cornell_original_test.json  cornell_vol_test.json  cornell_volume_10000_samples.json  final_render_book_1.json  final_render_checker.json  final_render_scene_blur.json  light_scene1.json  perlin_spheres.json  quad_scene1.json  scene2.json  scene2_cam.json  scene_touching_spheres.json  settings.json  test.json  z2.json
src/: App.cpp  App.hpp  CMakeLists.txt  Defs.hpp  EAssert.cpp  EAssert.hpp  Input.hpp  Paths.hpp  Serialize.cpp  Serialize.hpp  Settings.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp  main.cpp  pch.hpp
src/cpu_raytrace/: AABB.hpp  BVH.cpp  BVH.hpp  Camera.hpp  ConstantMedium.cpp  ConstantMedium.hpp  Fwd.hpp  HitRecord.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  Interval.cpp  Interval.hpp  Material.cpp  Material.hpp  Math.hpp  PDF.hpp  PerlinNoiseGen.cpp  PerlinNoiseGen.hpp  Quad.cpp  Quad.hpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp
src/gl/: Buffer.hpp  DynamicBuffer.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  Texture.cpp  Texture.hpp
src/raytrace/: Ray.hpp
src/shaders/: rtiow.fs.glsl  textured_quad.fs.glsl  textured_quad.vs.glsl
